# conjugator

./: .gitignore  CMakeLists.txt  LICENSE  todo.txt
app/src/: dump.cpp  main.cpp
japanese/: CMakeLists.txt
japanese/include/: Adjective.hpp  Conjugatable.hpp  Suffix.hpp  Verb.hpp  Verb_Factory.hpp  Verb_Godan.hpp  Verb_Ichidan.hpp
japanese/src/: Suffix.cpp  Verb.cpp  Verb_Factory.cpp  Verb_Godan.cpp  Verb_Ichidan.cpp
japanese/tests/: CMakeLists.txt  verb_godan.cpp  verb_ichidan.cpp
ui/: CMakeLists.txt
ui/include/: ui.hpp
ui/src/: ui.cpp
